@@ -4,8 +4,8 @@
 #ifndef _CAPTURE_H_
 #define _CAPTURE_H_
 
-#include "V4LCapture.h"
 #include "FrameConverter.h"
+#include "V4LCapture_Min.h"
 
 // 
 class CCapture
